# e2spd

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  State.cpp  State.hpp  TTS.cpp  TTS.hpp  commands.hpp  log.hpp  main.cpp  utility.hpp
